--- a/student.html
+++ b/student.html
@@ -11,6 +11,8 @@
 
   <h2>My Enrolled Courses</h2>
   <ul id="enrolledCourses"></ul>
+<ul id="availableCourses"></ul>
+<ul id="enrolledCourses"></ul>
 
   <script type="module" src="./student.js"></script>
 </body>
