--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>eLearning Platform</title>
   </head>
   <body>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="signUp()">Sign Up</button>
-    <button onclick="logIn()">Log In</button>
+  <!-- index.html -->
+<input type="email" id="email" placeholder="Email" />
+<input type="password" id="password" placeholder="Password" />
 
-    <script type="module" src="./script.js"></script>
+<button onclick="signUp()">Sign Up</button>
+<button onclick="logIn()">Log In</button>
+
+<script type="module" src="script.js"></script>
+
   </body>
 </html>
