--- a/student.html
+++ b/student.html
@@ -7,13 +7,11 @@
   <h1>Welcome, Student 🎓</h1>
 
   <h2>Available Courses</h2>
-  <ul id="availableCourses"></ul>
+<div id="courses"></div>
 
-  <h2>My Enrolled Courses</h2>
-  <ul id="enrolledCourses"></ul>
-<ul id="availableCourses"></ul>
-<ul id="enrolledCourses"></ul>
+<h2>Your Enrolled Courses</h2>
+<div id="enrolled-courses"></div>
 
-  <script type="module" src="./student.js"></script>
+<script type="module" src="student.js"></script>
 </body>
 </html>
