--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!-- signup.html -->
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Signup</title>
+  <title>Login</title>
 </head>
 <body>
-  <h2>Signup</h2>
+  <h2>Login</h2>
   <input type="email" id="email" placeholder="Email">
   <input type="password" id="password" placeholder="Password">
-  <button onclick="signup()">Sign Up</button>
+  <button onclick="login()">Login</button>
+  <p>Don't have an account? <a href="signup.html">Sign up</a></p>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
