--- a/admin.html
+++ b/admin.html
@@ -7,8 +7,6 @@
   <h1>Welcome, Admin!</h1>
   <button onclick="logout()">Logout</button>
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
