--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,6 @@
   <button onclick="signup()">Sign Up</button>
   <p>Already have an account? <a href="index.html">Login</a></p>
 
-  <script type="module" src="app.js"></script>
+  <script type="module" src="signup.js"></script>
 </body>
 </html>
