--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       try {
         const result = await signInWithPopup(auth, provider);
         alert("Login successful!");
-        window.location.href = "course1-basic.html"; // or any homepage
+        window.location.href = "courses.html"; // or any homepage
       } catch (error) {
         console.error(error);
         alert("Login failed.");
