--- a/course.html
+++ b/course.html
@@ -41,8 +41,8 @@
 
       const course = "course1";
       const redirectTo = purchased.includes(course)
-        ? `${course}-premium.html`
-        : `${course}-basic.html`;
+        ? `${course}-course1-premium.html`
+        : `${course}-course1-basic.html`;
 
       window.location.href = redirectTo;
     });
