--- a/course1-premium.html
+++ b/course1-premium.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html>
-<head><title>Premium Course 1</title></head>
+<head>
+  <title>Premium Course 1</title>
+</head>
 <body>
   <h1>Welcome to Premium Course 1 🎉</h1>
 
-  <script type="module">
-    import { auth, db } from "./firebase.js";
-    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-    import { doc, getDoc } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+  <!-- Profile Display (optional, if you have these elements in your layout) -->
+  <div>
+    <img id="userAvatar" src="" alt="User Avatar" width="50">
+    <span id="userName"></span>
+  </div>
 
+  <script type="module">
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
+    import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+    import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
+
+    // Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+      authDomain: "syncskilll.firebaseapp.com",
+      projectId: "syncskilll",
+      storageBucket: "syncskilll.firebasestorage.app",
+      messagingSenderId: "203322315096",
+      appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+      measurementId: "G-JWWWM2ZQSK"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    // DOM Elements (optional)
+    const userAvatar = document.getElementById('userAvatar');
+    const userName = document.getElementById('userName');
+
+    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+
+    const updateUserProfile = (user) => {
+      const name = user.displayName || user.email?.split('@')[0] || 'User';
+      const photoURL = user.photoURL || fallbackAvatar;
+
+      if (userAvatar) {
+        userAvatar.src = photoURL;
+        userAvatar.onerror = () => userAvatar.src = fallbackAvatar;
+      }
+      if (userName) userName.textContent = name;
+    };
+
+    const clearUserProfile = () => {
+      if (userAvatar) userAvatar.src = fallbackAvatar;
+      if (userName) userName.textContent = '';
+    };
+
+    // Auth and Course Access Logic
     onAuthStateChanged(auth, async (user) => {
-      if (user) {
+      if (!user) {
+        clearUserProfile();
+        window.location.href = "login.html";
+        return;
+      }
+
+      updateUserProfile(user);
+
+      try {
         const ref = doc(db, "userPurchases", user.uid);
         const snap = await getDoc(ref);
         const purchased = snap.exists() ? snap.data().purchasedCourses || [] : [];
@@ -18,155 +73,37 @@
         if (!purchased.includes("course1")) {
           window.location.href = "course1-basic.html";
         }
-      } else {
-        window.location.href = "login.html";
+      } catch (error) {
+        console.error("Error checking purchase status:", error);
+        alert("An error occurred. Please try again.");
       }
     });
+
+    // Logout function (optional)
+    window.logout = async () => {
+      try {
+        await signOut(auth);
+        clearUserProfile();
+        sessionStorage.clear();
+        localStorage.removeItem('userData');
+        window.location.href = "/index.html";
+      } catch (err) {
+        console.error("Logout failed", err);
+        alert("Logout failed. Please try again.");
+      }
+    };
+
+    // Auto-logout after inactivity (1 hour)
+    let inactivityTimer;
+    const resetInactivityTimer = () => {
+      clearTimeout(inactivityTimer);
+      inactivityTimer = setTimeout(() => logout(), 3600000);
+    };
+
+    ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event =>
+      window.addEventListener(event, resetInactivityTimer)
+    );
+    resetInactivityTimer();
   </script>
-
-
-
-
-
-
-
-
-
-  <script type="module">
-  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-
-  // Your Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-    authDomain: "syncskilll.firebaseapp.com",
-    projectId: "syncskilll",
-    storageBucket: "syncskilll.firebasestorage.app",
-    messagingSenderId: "203322315096",
-    appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-    measurementId: "G-JWWWM2ZQSK"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  // DOM elements
-  const elements = {
-    userAvatar: document.getElementById('userAvatar'),
-    mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-    userName: document.getElementById('userName'),
-    dropdownAvatar: document.getElementById('dropdownAvatar'),
-    dropdownName: document.getElementById('dropdownName'),
-    dropdownEmail: document.getElementById('dropdownEmail'),
-    mobileUserName: document.getElementById('mobileUserName'),
-    mobileUserEmail: document.getElementById('mobileUserEmail'),
-    welcomeUserSpan: document.getElementById('user')
-  };
-
-  // Clear sensitive data from DOM
-  const clearUserProfile = () => {
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    try {
-      if (elements.userName) elements.userName.textContent = '';
-      if (elements.dropdownName) elements.dropdownName.textContent = '';
-      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = fallbackAvatar;
-          img.removeAttribute('srcset'); // Clear any cached image sources
-        }
-      });
-    } catch (error) {
-      console.error('Error clearing profile:', error);
-    }
-  };
-
-  // Update user profile on the page
-  const updateUserProfile = (user) => {
-    if (!user) {
-      clearUserProfile();
-      return;
-    }
-
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-    const email = user.email || 'No email provided';
-    const photoURL = user.photoURL || fallbackAvatar;
-
-    try {
-      if (elements.userName) elements.userName.textContent = displayName;
-      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = photoURL;
-          img.onerror = () => img.src = fallbackAvatar;
-        }
-      });
-    } catch (error) {
-      console.error('Profile update error:', error);
-    }
-  };
-
-  // Auth state handling
-  const handleAuthState = (user) => {
-    if (!user) {
-      clearUserProfile(); // Clear DOM data immediately
-      window.location.href = '/login.html'; // Redirect to login
-      return;
-    }
-    updateUserProfile(user); // Update user profile if logged in
-  };
-
-  // Watch for auth state changes
-  onAuthStateChanged(auth, handleAuthState);
-
-  // Prevent back/forward cache (bfcache) from restoring sensitive data
-  window.addEventListener('unload', () => {
-    clearUserProfile(); // Clear DOM data on page unload
-  });
-
-  // Logout function
-  window.logout = async () => {
-    try {
-      await signOut(auth);
-      clearUserProfile(); // Clear DOM data before redirect
-      sessionStorage.clear(); // Clear session storage
-      localStorage.removeItem('userData'); // Clear specific localStorage keys if used
-      window.location.href = '/index.html'; // Redirect to login
-    } catch (error) {
-      console.error('Logout error:', error);
-      alert('Error during logout. Please try again.');
-    }
-  };
-
-  // Optional: Auto logout after inactivity (1 hour)
-  let inactivityTimer;
-  const resetSessionTimer = () => {
-    clearTimeout(inactivityTimer);
-    inactivityTimer = setTimeout(() => logout(), 3600000); // 1 hour
-  };
-  ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
-    window.addEventListener(event, resetSessionTimer);
-  });
-  resetSessionTimer();
-
-  // Prevent browser back button from showing cached page
-  window.addEventListener('pageshow', (event) => {
-    if (event.persisted || window.performance?.navigation?.type === 2) {
-      // Page was restored from bfcache or back navigation
-      auth.currentUser ? updateUserProfile(auth.currentUser) : handleAuthState(null);
-    }
-  });
-</script>
 </body>
 </html>
