--- a/fake-payment.html
+++ b/fake-payment.html
@@ -245,7 +245,7 @@
 
       // ✅ Redirect to course page after 2 seconds
       setTimeout(() => {
-        window.location.href = `/premium-course.html?course=${course}`;
+        window.location.href = `/premium-course.html`;
       }, 2000);
     } catch (err) {
       loader.style.display = "none";
