--- a/course1-basic.html
+++ b/course1-basic.html
@@ -1422,20 +1422,12 @@ button:focus, a:focus {
 
 
 
-  <section class="section-image-left">
-    <div class="section-image-left__container">
-      <div class="section-image-left__image-wrapper">
-        <img src="https://d3kl8zsmmx4oop.cloudfront.net/SEO_4be34a6ed1_07b92bff39.webp" alt="SEO Course" class="seo-image-box__image">
-        <div class="section-image-left__buttons-desktop">
-          <div class="seo-image-box__buttons">
-            <a href="/fake-payment.html">
-  <button class="seo-btn seo-btn--apply">
-    <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
-    </svg>
-    <span>Apply Now</span>
-  </button>
-</a>
+  <button id="applyBtn" class="seo-btn seo-btn--apply">
+  <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
+  </svg>
+  <span>Apply Now</span>
+</button>
             <button class="seo-btn seo-btn--download">
               <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v12m0 0l-3-3m3 3l3-3M5 21h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v14a2 2 0 002 2z"/>
@@ -1496,6 +1488,16 @@ button:focus, a:focus {
       </div>
     </div>
   </section>
+
+
+
+  <script>
+  document.getElementById("applyBtn").addEventListener("click", function () {
+    // Replace this with your actual redirect link
+    const courseId = "course1"; // You can dynamically get this if needed
+    window.location.href = `/fake-payment.html}`;
+  });
+</script>
 
 
   <!-- Firebase Setup and Utilities -->
